# CBPS-py

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
cbps/: __init__.py
cbps/core/: __init__.py  cbps_binary.py  cbps_continuous.py  cbps_multitreat.py  cbps_optimal.py  results.py
cbps/data/: Blackwell.csv  LaLonde.csv  npcbps_continuous_sim.csv  nsw.csv  nsw_dw.csv  psid_controls.csv  psid_controls2.csv  psid_controls3.csv  simulation_dgp1_seed12345.csv  simulation_dgp2_seed12345.csv  simulation_dgp3_seed12345.csv  simulation_dgp4_seed12345.csv
cbps/datasets/: __init__.py  blackwell.py  continuous.py  lalonde.py  npcbps_sim.py
cbps/diagnostics/: __init__.py  balance.py  balance_cbmsm_addon.py  continuous_diagnostics.py  plots.py
cbps/highdim/: __init__.py  gmm_loss.py  hdcbps.py  lasso_utils.py  weight_funcs.py
cbps/inference/: __init__.py  asyvar.py  vcov_outcome.py
cbps/iv/: __init__.py  cbiv.py
cbps/msm/: __init__.py  cbmsm.py
cbps/nonparametric/: __init__.py  cholesky_whitening.py  empirical_likelihood.py  npcbps.py  taylor_approx.py
cbps/sklearn/: __init__.py  estimator.py
cbps/utils/: __init__.py  formula.py  helpers.py  numerics.py  r_compat.py  validation.py  variance_transform.py  weights.py
docs/: advanced_usage.rst  conf.py  implementation_notes.rst  index.rst  installation.rst  quickstart.rst  references.rst  theory.rst
docs/api/: cbiv.rst  cbmsm.rst  cbps.rst  datasets.rst  diagnostics.rst  hdcbps.rst  index.rst  inference.rst  npcbps.rst  sklearn.rst
docs/tutorials/: index.rst
examples/: README.md  replicate_fong_hazlett_imai_2018.ipynb  replicate_fong_hazlett_imai_2018.py  replicate_imai_ratkovic_2014.ipynb  replicate_imai_ratkovic_2014.py  replicate_imai_ratkovic_2015.ipynb  replicate_imai_ratkovic_2015.py  run_replication.py
paper/: paper.bib  paper.md
tests/: README.md  __init__.py  conftest.py  test_api.py  test_bugfix_audit.py  test_imports.py  test_ux_polish.py
tests/binary/: __init__.py  test_edge_cases.py  test_integration.py  test_unit.py
tests/continuous/: __init__.py  test_continuous.py
tests/core/: __init__.py  test_core.py
tests/datasets/: __init__.py  test_datasets.py
tests/diagnostics/: __init__.py  test_diagnostics.py
tests/highdim/: __init__.py  test_hdcbps.py
tests/inference/: __init__.py  test_inference.py
tests/integration/: __init__.py  test_pipeline.py
tests/iv/: __init__.py  test_cbiv.py
tests/monte_carlo/: README.md  __init__.py  conftest.py  paper_constants.py  test_fan2022.py  test_fong2018.py  test_imai2014.py  test_ir2015.py  test_ning2020.py
tests/msm/: __init__.py  test_cbmsm.py
tests/multitreat/: __init__.py  test_multitreat.py
tests/nonparametric/: __init__.py  test_npcbps.py
tests/optimal/: __init__.py  test_ocbps.py
tests/sklearn/: __init__.py  test_estimator.py
tests/utils/: __init__.py  test_utils.py
